victoriametrics/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoriametrics
  namespace: guardian
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    #      cloud.google.com/l4-rbs: "enabled"
    networking.gke.io/internal-load-balancer-subnet: "prod-loadbalancer"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/instance: victoriametrics
    app.kubernetes.io/name: vmsingle
  ports:
    - name: http
      protocol: TCP
      port: 8429
      targetPort: 8429
